--- a/scss/_inicio.scss
+++ b/scss/_inicio.scss
@@ -55,6 +55,10 @@
     width: 320px;
     height: 190px;
   }
+  @media (max-width: 480px) {
+    width: 260px;
+    height: 180px;
+  }
 }
 .videoDescription {
   display: block;
@@ -155,6 +159,9 @@
 }
 .grafico-inicio {
   width: 50%;
+  @media (max-width: 480px) {
+    width: 100%;
+  }
 }
 .graficoInicio {
   display: flex;
