--- a/scss/_mas-informacion.scss
+++ b/scss/_mas-informacion.scss
@@ -114,6 +114,10 @@
     width: 350px;
     height: 200px;
   }
+  @media (max-width: 480px) {
+    width: 270px;
+    height: 180px;
+  }
 }
 .img-flecha {
   width: 300px;
